--- a/Altria.ini
+++ b/Altria.ini
@@ -30,35 +30,35 @@
 
 
 
-custom_proxy_group=节点选择`select`[]故障转移`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`(港|HK|HONG|Hong|HGC|台|新北|彰化|TW|Tai|新|狮城|SG|Singa|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap|京日|杭日|青日|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United.*?States)
-custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`500
-custom_proxy_group=香港节点`select`(港|HK|HONG|Hong|HGC)
-custom_proxy_group=台湾节点`select`(台|新北|彰化|TW|Tai)
-custom_proxy_group=狮城节点`select`(新|狮城|SG|Singa)
-custom_proxy_group=日本节点`select``(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap|京日|杭日|青日)
-custom_proxy_group=美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United.*?States)
-custom_proxy_group=其他节点`select`GCX`^((?!新|多伦多|哥伦布|纽约|弗里蒙特|Jap|Tai|Singa|狮城|SG|港|HK|HONG|Hong|HGC|台|新北|彰化|TW|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap|京日|杭日|青日|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United.*?States).)*$
-custom_proxy_group=手动切换`select`^((?!流量|时间).)*$
-custom_proxy_group=劫持拦截`select`[]REJECT`[]节点选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT
-custom_proxy_group=Games`select`[]DIRECT`(港|HK|HONG|Hong|HGC|台|新北|彰化|TW|Tai|新|狮城|SG|Singa|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap|京日|杭日|青日)
-custom_proxy_group=PayPal`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=Microsoft`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=Google`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=Telegram`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=Apple`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=AppleNews`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=Spotify`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=TIDAL`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=Twitch`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=BiliBili`select`[]DIRECT`[]其他节点`[]香港节点`[]台湾节点
-custom_proxy_group=Bahamut`select`[]节点选择`[]台湾节点`[]DIRECT`(台|新北|彰化|TW|Tai)
-custom_proxy_group=YouTube`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=AbemaTV`select`[]节点选择`[]日本节点`[]DIRECT`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap)
-custom_proxy_group=niconico`select`[]节点选择`[]日本节点`[]DIRECT`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap)
-custom_proxy_group=NETFLIX`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=DisneyPlus`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
-custom_proxy_group=GlobalMedia`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT
-custom_proxy_group=规则外路由选择`select`[]节点选择`[]DIRECT`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点
-custom_proxy_group=故障转移`fallback`(450|451|452)`http://1.1.1.1`86400
+;custom_proxy_group=节点选择`select`[]故障转移`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`(港|HK|HONG|Hong|HGC|台|新北|彰化|TW|Tai|新|狮城|SG|Singa|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap|京日|杭日|青日|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United.*?States)
+;custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`500
+;custom_proxy_group=香港节点`select`(港|HK|HONG|Hong|HGC)
+;custom_proxy_group=台湾节点`select`(台|新北|彰化|TW|Tai)
+;custom_proxy_group=狮城节点`select`(新|狮城|SG|Singa)
+;custom_proxy_group=日本节点`select``(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap|京日|杭日|青日)
+;custom_proxy_group=美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United.*?States)
+;custom_proxy_group=其他节点`select`GCX`^((?!新|多伦多|哥伦布|纽约|弗里蒙特|Jap|Tai|Singa|狮城|SG|港|HK|HONG|Hong|HGC|台|新北|彰化|TW|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap|京日|杭日|青日|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United.*?States).)*$
+;custom_proxy_group=手动切换`select`^((?!流量|时间).)*$
+;custom_proxy_group=劫持拦截`select`[]REJECT`[]节点选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT
+;custom_proxy_group=Games`select`[]DIRECT`(港|HK|HONG|Hong|HGC|台|新北|彰化|TW|Tai|新|狮城|SG|Singa|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap|京日|杭日|青日)
+;custom_proxy_group=PayPal`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=Microsoft`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=Google`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=Telegram`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=Apple`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=AppleNews`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=Spotify`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=TIDAL`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=Twitch`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=BiliBili`select`[]DIRECT`[]其他节点`[]香港节点`[]台湾节点
+;custom_proxy_group=Bahamut`select`[]节点选择`[]台湾节点`[]DIRECT`(台|新北|彰化|TW|Tai)
+;custom_proxy_group=YouTube`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=AbemaTV`select`[]节点选择`[]日本节点`[]DIRECT`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap)
+;custom_proxy_group=niconico`select`[]节点选择`[]日本节点`[]DIRECT`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap)
+;custom_proxy_group=NETFLIX`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=DisneyPlus`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT`
+;custom_proxy_group=GlobalMedia`select`[]节点选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点`[]DIRECT
+;custom_proxy_group=规则外路由选择`select`[]节点选择`[]DIRECT`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]其他节点
+;custom_proxy_group=故障转移`fallback`(450|451|452)`http://1.1.1.1`86400
 ;fallback输入你常用的2-3个节点编号
 ;设置分组标志位
